# MarkovSentenceGenerator

./: README.md  markovchain.cpp  markovchain.hpp  meson.build  sentencegenerator.cpp
data/: small
models/: small.json
